--- a/package.json
+++ b/package.json
@@ -3,9 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "html-to-react": "^1.4.2",
+    "mdbreact": "^4.23.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-html-parser": "^2.0.2",
+    "react-redux": "^7.1.3",
+    "react-responsive-carousel": "^3.1.51",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "react-webpack": "^0.4.1",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "rss-parser": "^3.7.3",
+    "rss-to-json": "^1.0.5",
+    "serve": "^11.2.0",
+    "xml2js": "^0.4.22"
   },
   "scripts": {
     "start": "react-scripts start",
